--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "connect-form",
+  "name": "connect-formaline",
   "description": "urlencoded / multipart form parsing middleware for Connect",
-  "version": "0.2.1",
-  "author": "TJ Holowaychuk <tj@vision-media.ca>",
-  "dependencies": { "formidable": ">= 0.9.3" },
+  "version": "0.0.1",
+  "author": "Ilya Shaisultanov <ilya.shaisultanov@gmail.com>",
+  "dependencies": { "formaline": ">= 0.6.4" },
   "main": "./index.js",
-  "engines": { "node": ">= 0.1.98" }
+  "engines": { "node": ">= 0.4.0" }
 }
